Fix logo alignment

--- a/css/_wmui-style-guide.dev.css
+++ b/css/_wmui-style-guide.dev.css
@@ -219,7 +219,7 @@ section {
 			height: var( --site__logo-height-large );
 			margin-bottom: 2rem;
 			margin-right: 0.8rem;
-			margin-left: -2rem;
+			margin-left: -1.2rem;
 			vertical-align: middle;
 		}
 
